Refactor samples build and add a first sample for nuget3 walkthrough

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,8 +3,12 @@
   <packageRestore>
     <add key="enabled" value="True" />
   </packageRestore>
+  <config>
+    <add key="repositoryPath" value="packages" />
+  </config>
   <packageSources>
-    <clear/>
-    <add key="local-build" value="./Packages" />
+    <clear />
+    <add key="local-build" value="bin/packages" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
